✨ Finalização das Request Swagger
