# controller/model/req/create_software_req.go
@@ -1,0 +1,5 @@
+package req
+
+type CreateSoftwareRequest struct {
+	Name string `json:"name"`
+}
